# fast-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-prod.yaml  docker-compose.yaml  modules.todo  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: compose-check.yaml  main.yaml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  pytest.ini
backend/.utils/templates/module/: __main__.py
backend/.utils/templates/module/source/: __init__.py.mako  exceptions.py.mako  logic.py.mako  routes.py.mako  schemas.py.mako  settings.py.mako
backend/.utils/templates/module/tests/: __init__.py.mako  default.py.mako  fixtures.mako
backend/alembic/: env.py
backend/alembic/versions/: 9f19e9498eae_user_model.py
backend/app/: __main__.py
backend/app/config/: __init__.py  default.py
backend/app/db/: __init__.py
backend/app/db/connection/: __init__.py  session.py
backend/app/db/models/: user.py
backend/app/db/models/mixins/: index.py
backend/app/metrics/: metrics.py
backend/app/metrics/collectors/: __init__.py  system.py
backend/app/modules/healthcheck/: health.py  routes.py
backend/app/modules/static/: __init__.py  routes.py
backend/app/modules/time/: __init__.py  now.py
backend/app/src/: app.py  docs.py  lifespan.py  routers.py  settings.py
backend/app/src/common/: exceptions.py  limiter.py  logger.py  logging.py
backend/app/src/middlewares/: __init__.py  cors.py  metrics.py
backend/app/src/modules/: __init__.py  base.py
backend/app/src/modules/auth/: __init__.py  routes.py  settings.py
backend/app/src/modules/auth/basic/: exceptions.py  routes.py  schemas.py  utils.py
backend/app/src/modules/auth/jwt/: __init__.py  token.py
backend/app/src/modules/healthcheck/: __init__.py  health.py  routes.py  schemas.py
backend/app/src/modules/static/: __init__.py  exceptions.py  routes.py  services.py  settings.py
backend/app/src/modules/time/: __init__.py  now.py
backend/prometheus/: prometheus.yaml
backend/tests/: conftest.py  test.py
backend/tests/fixtures/: __init__.py  auth.py  database.py  utils.py
backend/tests/test_enpoints/: test_main.py
backend/tests/testsuites/: base.py  utils.py
backend/tests/testsuites/auth/: __init__.py  basic.py  default.py  fixtures.py
deploy/: dependencies.sh  deploy-service.sh  fastapi-app.service  init-db.sh  quick-deploy.sh
graphana/dashboards/: dashboards.yaml  default.json
nginx/: default-http.conf  default-https.conf  nginx-dev.conf  nginx-prod.conf
