[tool.poetry]
name = "fast-template"
version = "0.1.0"
description = "Modular FastApi Template"
authors = ["peplxx"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
