[tool.poetry]
name = "fast-template"
version = "0.1.3"
description = "Modular FastApi Template"
authors = ["peplxx"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
python-multipart = "^0.0.17"
psycopg2-binary = "^2.9.10"
python-jose = "^3.4.0"
passlib = "^1.7.4"
prometheus-client = "^0.21.0"
psutil = "^6.1.0"
pytest-asyncio = "^0.24.0"
bcrypt = "^4.2.1"
slowapi = "^0.1.9"
scalar-fastapi = "^1.0.3"
email-validator = "^2.2.0"
mako = "^1.3.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
sqlalchemy-utils = "^0.41.2"
configargparse = "^1.7"
httpx = "^0.27.2"
pytest-async = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
